[package]
name = "redlux"
version = "0.4.0"
description = "AAC decoder for MPEG-4 (MP4, M4A etc) and AAC files, with rodio support"
authors = ["Kasper Henningsen"]
edition = "2018"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/probablykasper/redlux#readme"
repository = "https://github.com/probablykasper/redlux"
documentation = "https://docs.rs/redlux"
keywords = ["aac", "mp4", "m4a", "decoder", "rodio"]
categories = ["multimedia::audio"]

[dependencies]
mp4 = "0.10.0"
fdk-aac = "0.4.0"
rodio = { version = "0.15.0", default-features = false }
